oprule/build_vs2008/parser/op_rule.output
Terminals unused in grammar

   STEP
   NEG


Grammar

    0 $accept: line $end

    1 line: NAME ASSIGN boolexpression ';'
    2     | NAME ASSIGN expression ';'
    3     | boolexpression ';'
    4     | expression ';'
    5     | NAME ASSIGN oprule ';'
    6     | oprule ';'
    7     | reassignment
    8     | error ';'

    9 reassignment: boolexpression ASSIGN
   10             | expression ASSIGN

   11 oprule: action trigger

   12 trigger: WHEN boolexpression

   13 action: modelaction
   14       | action THEN action
   15       | action WHILE action
   16       | '(' action ')'

   17 modelaction: actionspec targetspec transitionspec
   18            | actionspec targetspec

   19 actionspec: SET interface

   20 targetspec: TO expression

   21 transitionspec: RAMP NUMBER MIN

   22 term: NUMBER
   23     | unary
   24     | date
   25     | namedval
   26     | laggedval

   27 boolterm: '(' boolexpression ')'
   28         | FALSE
   29         | TRUE
   30         | namedboolval

   31 array: '[' NUMBER
   32      | array ',' NUMBER
   33      | array ']'

   34 unary: SQRT '(' expression ')'
   35      | ABS '(' expression ')'
   36      | LOG '(' expression ')'
   37      | LN '(' expression ')'
   38      | EXP '(' expression ')'
   39      | LOOKUP '(' expression ',' array ',' array ')'

   40 expression: term
   41           | expression '^' expression
   42           | expression '*' expression
   43           | expression '/' expression
   44           | expression '+' expression
   45           | expression '-' expression
   46           | '-' expression
   47           | '(' expression ')'
   48           | IFELSE '(' boolexpression ',' expression ',' expression ')'
   49           | ACCUMULATE '(' expression ',' expression ',' boolexpression ')'
   50           | ACCUMULATE '(' expression ',' expression ')'
   51           | PREDICT '(' expression ',' LINEAR ',' NUMBER MIN ')'
   52           | PREDICT '(' expression ',' QUAD ',' NUMBER MIN ')'
   53           | MIN2 '(' expression ',' expression ')'
   54           | MAX2 '(' expression ',' expression ')'
   55           | MIN3 '(' expression ',' expression ',' expression ')'
   56           | MAX3 '(' expression ',' expression ',' expression ')'
   57           | PID '(' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ')'
   58           | IPID '(' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ')'

   59 boolexpression: boolterm
   60               | expression LE expression
   61               | expression GE expression
   62               | expression GT expression
   63               | expression LT expression
   64               | expression EQ expression
   65               | expression NE expression
   66               | boolexpression OR boolexpression
   67               | boolexpression AND boolexpression
   68               | NOT boolexpression

   69 laggedval: NAME '(' 't' '-' NUMBER ')'

   70 arglist: arg
   71        | arglist ',' arg
   72        | arglist ';' arg

   73 arg: NAME DEFINE NUMBER
   74    | NAME DEFINE QUOTEDSTRING
   75    | NAME DEFINE NAME

   76 date: DATETIME
   77     | REFDATE REFTIME
   78     | REFDATE
   79     | SEASON
   80     | REFSEASON REFTIME
   81     | REFSEASON
   82     | YEAR
   83     | MONTH
   84     | DAY
   85     | HOUR
   86     | MINDAY
   87     | MIN
   88     | DT

   89 interface: IFPARAM '(' arglist ')'
   90          | IFNAME

   91 namedval: NAMEDVAL
   92         | EXPRESSPARAM '(' arglist ')'
   93         | EXPRESS
   94         | interface

   95 namedboolval: BOOLNAMEDVAL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 16 27 34 35 36 37 38 39 47 48 49 50 51 52 53 54 55 56 57 58
    69 89 92
')' (41) 16 27 34 35 36 37 38 39 47 48 49 50 51 52 53 54 55 56 57 58
    69 89 92
'*' (42) 42
'+' (43) 44
',' (44) 32 39 48 49 50 51 52 53 54 55 56 57 58 71
'-' (45) 45 46 69
'/' (47) 43
';' (59) 1 2 3 4 5 6 8 72
'[' (91) 31
']' (93) 33
'^' (94) 41
't' (116) 69
error (256) 8
NAME (258) 1 2 5 69 73 74 75
IFNAME (259) 90
IFPARAM (260) 89
EXPRESS (261) 93
EXPRESSPARAM (262) 92
NAMEDVAL (263) 91
BOOLNAMEDVAL (264) 95
LT (265) 63
LE (266) 60
GT (267) 62
GE (268) 61
EQ (269) 64
NE (270) 65
MAX2 (271) 54
MIN2 (272) 53
MAX3 (273) 56
MIN3 (274) 55
PID (275) 57
IPID (276) 58
LOOKUP (277) 39
IFELSE (278) 48
ACCUMULATE (279) 49 50
PREDICT (280) 51 52
LINEAR (281) 51
QUAD (282) 52
SQRT (283) 34
LOG (284) 36
LN (285) 37
EXP (286) 38
ABS (287) 35
SET (288) 19
TO (289) 20
WHEN (290) 12
WHILE (291) 15
THEN (292) 14
RAMP (293) 21
STEP (294)
YEAR (295) 82
MONTH (296) 83
DAY (297) 84
HOUR (298) 85
MINDAY (299) 86
MIN (300) 21 51 52 87
DT (301) 88
SEASON (302) 79
DATETIME (303) 76
REFDATE (304) 77 78
REFTIME (305) 77 80
REFSEASON (306) 80 81
NUMBER (307) 21 22 31 32 51 52 69 73
QUOTEDSTRING (308) 74
ASSIGN (309) 1 2 5 9 10
FALSE (310) 28
TRUE (311) 29
OR (312) 66
AND (313) 67
NOT (314) 68
DEFINE (315) 73 74 75
NEG (316)


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
line (75)
    on left: 1 2 3 4 5 6 7 8, on right: 0
reassignment (76)
    on left: 9 10, on right: 7
oprule (77)
    on left: 11, on right: 5 6
trigger (78)
    on left: 12, on right: 11
action (79)
    on left: 13 14 15 16, on right: 11 14 15 16
modelaction (80)
    on left: 17 18, on right: 13
actionspec (81)
    on left: 19, on right: 17 18
targetspec (82)
    on left: 20, on right: 17 18
transitionspec (83)
    on left: 21, on right: 17
term (84)
    on left: 22 23 24 25 26, on right: 40
boolterm (85)
    on left: 27 28 29 30, on right: 59
array (86)
    on left: 31 32 33, on right: 32 33 39
unary (87)
    on left: 34 35 36 37 38 39, on right: 23
expression (88)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58, on right: 2 4 10 20 34 35 36 37 38 39 41 42 43 44 45 46 47
    48 49 50 51 52 53 54 55 56 57 58 60 61 62 63 64 65
boolexpression (89)
    on left: 59 60 61 62 63 64 65 66 67 68, on right: 1 3 9 12 27 48
    49 66 67 68
laggedval (90)
    on left: 69, on right: 26
arglist (91)
    on left: 70 71 72, on right: 71 72 89 92
arg (92)
    on left: 73 74 75, on right: 70 71 72
date (93)
    on left: 76 77 78 79 80 81 82 83 84 85 86 87 88, on right: 24
interface (94)
    on left: 89 90, on right: 19 94
namedval (95)
    on left: 91 92 93 94, on right: 25
namedboolval (96)
    on left: 95, on right: 30


state 0

    0 $accept: . line $end

    error         shift, and go to state 1
    NAME          shift, and go to state 2
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    BOOLNAMEDVAL  shift, and go to state 8
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    PID           shift, and go to state 13
    IPID          shift, and go to state 14
    LOOKUP        shift, and go to state 15
    IFELSE        shift, and go to state 16
    ACCUMULATE    shift, and go to state 17
    PREDICT       shift, and go to state 18
    SQRT          shift, and go to state 19
    LOG           shift, and go to state 20
    LN            shift, and go to state 21
    EXP           shift, and go to state 22
    ABS           shift, and go to state 23
    SET           shift, and go to state 24
    YEAR          shift, and go to state 25
    MONTH         shift, and go to state 26
    DAY           shift, and go to state 27
    HOUR          shift, and go to state 28
    MINDAY        shift, and go to state 29
    MIN           shift, and go to state 30
    DT            shift, and go to state 31
    SEASON        shift, and go to state 32
    DATETIME      shift, and go to state 33
    REFDATE       shift, and go to state 34
    REFSEASON     shift, and go to state 35
    NUMBER        shift, and go to state 36
    FALSE         shift, and go to state 37
    TRUE          shift, and go to state 38
    NOT           shift, and go to state 39
    '-'           shift, and go to state 40
    '('           shift, and go to state 41

    line            go to state 42
    reassignment    go to state 43
    oprule          go to state 44
    action          go to state 45
    modelaction     go to state 46
    actionspec      go to state 47
    term            go to state 48
    boolterm        go to state 49
    unary           go to state 50
    expression      go to state 51
    boolexpression  go to state 52
    laggedval       go to state 53
    date            go to state 54
    interface       go to state 55
    namedval        go to state 56
    namedboolval    go to state 57


state 1

    8 line: error . ';'

    ';'  shift, and go to state 58


state 2

    1 line: NAME . ASSIGN boolexpression ';'
    2     | NAME . ASSIGN expression ';'
    5     | NAME . ASSIGN oprule ';'
   69 laggedval: NAME . '(' 't' '-' NUMBER ')'

    ASSIGN  shift, and go to state 59
    '('     shift, and go to state 60


state 3

   90 interface: IFNAME .

    $default  reduce using rule 90 (interface)


state 4

   89 interface: IFPARAM . '(' arglist ')'

    '('  shift, and go to state 61


state 5

   93 namedval: EXPRESS .

    $default  reduce using rule 93 (namedval)


state 6

   92 namedval: EXPRESSPARAM . '(' arglist ')'

    '('  shift, and go to state 62


state 7

   91 namedval: NAMEDVAL .

    $default  reduce using rule 91 (namedval)


state 8

   95 namedboolval: BOOLNAMEDVAL .

    $default  reduce using rule 95 (namedboolval)


state 9

   54 expression: MAX2 . '(' expression ',' expression ')'

    '('  shift, and go to state 63


state 10

   53 expression: MIN2 . '(' expression ',' expression ')'

    '('  shift, and go to state 64


state 11

   56 expression: MAX3 . '(' expression ',' expression ',' expression ')'

    '('  shift, and go to state 65


state 12

   55 expression: MIN3 . '(' expression ',' expression ',' expression ')'

    '('  shift, and go to state 66


state 13

   57 expression: PID . '(' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ')'

    '('  shift, and go to state 67


state 14

   58 expression: IPID . '(' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ')'

    '('  shift, and go to state 68


state 15

   39 unary: LOOKUP . '(' expression ',' array ',' array ')'

    '('  shift, and go to state 69


state 16

   48 expression: IFELSE . '(' boolexpression ',' expression ',' expression ')'

    '('  shift, and go to state 70


state 17

   49 expression: ACCUMULATE . '(' expression ',' expression ',' boolexpression ')'
   50           | ACCUMULATE . '(' expression ',' expression ')'

    '('  shift, and go to state 71


state 18

   51 expression: PREDICT . '(' expression ',' LINEAR ',' NUMBER MIN ')'
   52           | PREDICT . '(' expression ',' QUAD ',' NUMBER MIN ')'

    '('  shift, and go to state 72


state 19

   34 unary: SQRT . '(' expression ')'

    '('  shift, and go to state 73


state 20

   36 unary: LOG . '(' expression ')'

    '('  shift, and go to state 74


state 21

   37 unary: LN . '(' expression ')'

    '('  shift, and go to state 75


state 22

   38 unary: EXP . '(' expression ')'

    '('  shift, and go to state 76


state 23

   35 unary: ABS . '(' expression ')'

    '('  shift, and go to state 77


state 24

   19 actionspec: SET . interface

    IFNAME   shift, and go to state 3
    IFPARAM  shift, and go to state 4

    interface  go to state 78


state 25

   82 date: YEAR .

    $default  reduce using rule 82 (date)


state 26

   83 date: MONTH .

    $default  reduce using rule 83 (date)


state 27

   84 date: DAY .

    $default  reduce using rule 84 (date)


state 28

   85 date: HOUR .

    $default  reduce using rule 85 (date)


state 29

   86 date: MINDAY .

    $default  reduce using rule 86 (date)


state 30

   87 date: MIN .

    $default  reduce using rule 87 (date)


state 31

   88 date: DT .

    $default  reduce using rule 88 (date)


state 32

   79 date: SEASON .

    $default  reduce using rule 79 (date)


state 33

   76 date: DATETIME .

    $default  reduce using rule 76 (date)


state 34

   77 date: REFDATE . REFTIME
   78     | REFDATE .

    REFTIME  shift, and go to state 79

    $default  reduce using rule 78 (date)


state 35

   80 date: REFSEASON . REFTIME
   81     | REFSEASON .

    REFTIME  shift, and go to state 80

    $default  reduce using rule 81 (date)


state 36

   22 term: NUMBER .

    $default  reduce using rule 22 (term)


state 37

   28 boolterm: FALSE .

    $default  reduce using rule 28 (boolterm)


state 38

   29 boolterm: TRUE .

    $default  reduce using rule 29 (boolterm)


state 39

   68 boolexpression: NOT . boolexpression

    NAME          shift, and go to state 81
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    BOOLNAMEDVAL  shift, and go to state 8
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    PID           shift, and go to state 13
    IPID          shift, and go to state 14
    LOOKUP        shift, and go to state 15
    IFELSE        shift, and go to state 16
    ACCUMULATE    shift, and go to state 17
    PREDICT       shift, and go to state 18
    SQRT          shift, and go to state 19
    LOG           shift, and go to state 20
    LN            shift, and go to state 21
    EXP           shift, and go to state 22
    ABS           shift, and go to state 23
    YEAR          shift, and go to state 25
    MONTH         shift, and go to state 26
    DAY           shift, and go to state 27
    HOUR          shift, and go to state 28
    MINDAY        shift, and go to state 29
    MIN           shift, and go to state 30
    DT            shift, and go to state 31
    SEASON        shift, and go to state 32
    DATETIME      shift, and go to state 33
    REFDATE       shift, and go to state 34
    REFSEASON     shift, and go to state 35
    NUMBER        shift, and go to state 36
    FALSE         shift, and go to state 37
    TRUE          shift, and go to state 38
    NOT           shift, and go to state 39
    '-'           shift, and go to state 40
    '('           shift, and go to state 82

    term            go to state 48
    boolterm        go to state 49
    unary           go to state 50
    expression      go to state 83
    boolexpression  go to state 84
    laggedval       go to state 53
    date            go to state 54
    interface       go to state 55
    namedval        go to state 56
    namedboolval    go to state 57


state 40

   46 expression: '-' . expression

    NAME          shift, and go to state 81
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    PID           shift, and go to state 13
    IPID          shift, and go to state 14
    LOOKUP        shift, and go to state 15
    IFELSE        shift, and go to state 16
    ACCUMULATE    shift, and go to state 17
    PREDICT       shift, and go to state 18
    SQRT          shift, and go to state 19
    LOG           shift, and go to state 20
    LN            shift, and go to state 21
    EXP           shift, and go to state 22
    ABS           shift, and go to state 23
    YEAR          shift, and go to state 25
    MONTH         shift, and go to state 26
    DAY           shift, and go to state 27
    HOUR          shift, and go to state 28
    MINDAY        shift, and go to state 29
    MIN           shift, and go to state 30
    DT            shift, and go to state 31
    SEASON        shift, and go to state 32
    DATETIME      shift, and go to state 33
    REFDATE       shift, and go to state 34
    REFSEASON     shift, and go to state 35
    NUMBER        shift, and go to state 36
    '-'           shift, and go to state 40
    '('           shift, and go to state 85

    term        go to state 48
    unary       go to state 50
    expression  go to state 86
    laggedval   go to state 53
    date        go to state 54
    interface   go to state 55
    namedval    go to state 56


state 41

   16 action: '(' . action ')'
   27 boolterm: '(' . boolexpression ')'
   47 expression: '(' . expression ')'

    NAME          shift, and go to state 81
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    BOOLNAMEDVAL  shift, and go to state 8
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    PID           shift, and go to state 13
    IPID          shift, and go to state 14
    LOOKUP        shift, and go to state 15
    IFELSE        shift, and go to state 16
    ACCUMULATE    shift, and go to state 17
    PREDICT       shift, and go to state 18
    SQRT          shift, and go to state 19
    LOG           shift, and go to state 20
    LN            shift, and go to state 21
    EXP           shift, and go to state 22
    ABS           shift, and go to state 23
    SET           shift, and go to state 24
    YEAR          shift, and go to state 25
    MONTH         shift, and go to state 26
    DAY           shift, and go to state 27
    HOUR          shift, and go to state 28
    MINDAY        shift, and go to state 29
    MIN           shift, and go to state 30
    DT            shift, and go to state 31
    SEASON        shift, and go to state 32
    DATETIME      shift, and go to state 33
    REFDATE       shift, and go to state 34
    REFSEASON     shift, and go to state 35
    NUMBER        shift, and go to state 36
    FALSE         shift, and go to state 37
    TRUE          shift, and go to state 38
    NOT           shift, and go to state 39
    '-'           shift, and go to state 40
    '('           shift, and go to state 41

    action          go to state 87
    modelaction     go to state 46
    actionspec      go to state 47
    term            go to state 48
    boolterm        go to state 49
    unary           go to state 50
    expression      go to state 88
    boolexpression  go to state 89
    laggedval       go to state 53
    date            go to state 54
    interface       go to state 55
    namedval        go to state 56
    namedboolval    go to state 57


state 42

    0 $accept: line . $end

    $end  shift, and go to state 90


state 43

    7 line: reassignment .

    $default  reduce using rule 7 (line)


state 44

    6 line: oprule . ';'

    ';'  shift, and go to state 91


state 45

   11 oprule: action . trigger
   14 action: action . THEN action
   15       | action . WHILE action

    WHEN   shift, and go to state 92
    WHILE  shift, and go to state 93
    THEN   shift, and go to state 94

    trigger  go to state 95


state 46

   13 action: modelaction .

    $default  reduce using rule 13 (action)


state 47

   17 modelaction: actionspec . targetspec transitionspec
   18            | actionspec . targetspec

    TO  shift, and go to state 96

    targetspec  go to state 97


state 48

   40 expression: term .

    $default  reduce using rule 40 (expression)


state 49

   59 boolexpression: boolterm .

    $default  reduce using rule 59 (boolexpression)


state 50

   23 term: unary .

    $default  reduce using rule 23 (term)


state 51

    4 line: expression . ';'
   10 reassignment: expression . ASSIGN
   41 expression: expression . '^' expression
   42           | expression . '*' expression
   43           | expression . '/' expression
   44           | expression . '+' expression
   45           | expression . '-' expression
   60 boolexpression: expression . LE expression
   61               | expression . GE expression
   62               | expression . GT expression
   63               | expression . LT expression
   64               | expression . EQ expression
   65               | expression . NE expression

    LT      shift, and go to state 98
    LE      shift, and go to state 99
    GT      shift, and go to state 100
    GE      shift, and go to state 101
    EQ      shift, and go to state 102
    NE      shift, and go to state 103
    ASSIGN  shift, and go to state 104
    '+'     shift, and go to state 105
    '-'     shift, and go to state 106
    '*'     shift, and go to state 107
    '/'     shift, and go to state 108
    '^'     shift, and go to state 109
    ';'     shift, and go to state 110


state 52

    3 line: boolexpression . ';'
    9 reassignment: boolexpression . ASSIGN
   66 boolexpression: boolexpression . OR boolexpression
   67               | boolexpression . AND boolexpression

    ASSIGN  shift, and go to state 111
    OR      shift, and go to state 112
    AND     shift, and go to state 113
    ';'     shift, and go to state 114


state 53

   26 term: laggedval .

    $default  reduce using rule 26 (term)


state 54

   24 term: date .

    $default  reduce using rule 24 (term)


state 55

   94 namedval: interface .

    $default  reduce using rule 94 (namedval)


state 56

   25 term: namedval .

    $default  reduce using rule 25 (term)


state 57

   30 boolterm: namedboolval .

    $default  reduce using rule 30 (boolterm)


state 58

    8 line: error ';' .

    $default  reduce using rule 8 (line)


state 59

    1 line: NAME ASSIGN . boolexpression ';'
    2     | NAME ASSIGN . expression ';'
    5     | NAME ASSIGN . oprule ';'

    NAME          shift, and go to state 81
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    BOOLNAMEDVAL  shift, and go to state 8
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    PID           shift, and go to state 13
    IPID          shift, and go to state 14
    LOOKUP        shift, and go to state 15
    IFELSE        shift, and go to state 16
    ACCUMULATE    shift, and go to state 17
    PREDICT       shift, and go to state 18
    SQRT          shift, and go to state 19
    LOG           shift, and go to state 20
    LN            shift, and go to state 21
    EXP           shift, and go to state 22
    ABS           shift, and go to state 23
    SET           shift, and go to state 24
    YEAR          shift, and go to state 25
    MONTH         shift, and go to state 26
    DAY           shift, and go to state 27
    HOUR          shift, and go to state 28
    MINDAY        shift, and go to state 29
    MIN           shift, and go to state 30
    DT            shift, and go to state 31
    SEASON        shift, and go to state 32
    DATETIME      shift, and go to state 33
    REFDATE       shift, and go to state 34
    REFSEASON     shift, and go to state 35
    NUMBER        shift, and go to state 36
    FALSE         shift, and go to state 37
    TRUE          shift, and go to state 38
    NOT           shift, and go to state 39
    '-'           shift, and go to state 40
    '('           shift, and go to state 41

    oprule          go to state 115
    action          go to state 45
    modelaction     go to state 46
    actionspec      go to state 47
    term            go to state 48
    boolterm        go to state 49
    unary           go to state 50
    expression      go to state 116
    boolexpression  go to state 117
    laggedval       go to state 53
    date            go to state 54
    interface       go to state 55
    namedval        go to state 56
    namedboolval    go to state 57


state 60

   69 laggedval: NAME '(' . 't' '-' NUMBER ')'

    't'  shift, and go to state 118


state 61

   89 interface: IFPARAM '(' . arglist ')'

    NAME  shift, and go to state 119

    arglist  go to state 120
    arg      go to state 121


state 62

   92 namedval: EXPRESSPARAM '(' . arglist ')'

    NAME  shift, and go to state 119

    arglist  go to state 122
    arg      go to state 121


state 63

   54 expression: MAX2 '(' . expression ',' expression ')'

    NAME          shift, and go to state 81
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    PID           shift, and go to state 13
    IPID          shift, and go to state 14
    LOOKUP        shift, and go to state 15
    IFELSE        shift, and go to state 16
    ACCUMULATE    shift, and go to state 17
    PREDICT       shift, and go to state 18
    SQRT          shift, and go to state 19
    LOG           shift, and go to state 20
    LN            shift, and go to state 21
    EXP           shift, and go to state 22
    ABS           shift, and go to state 23
    YEAR          shift, and go to state 25
    MONTH         shift, and go to state 26
    DAY           shift, and go to state 27
    HOUR          shift, and go to state 28
    MINDAY        shift, and go to state 29
    MIN           shift, and go to state 30
    DT            shift, and go to state 31
    SEASON        shift, and go to state 32
    DATETIME      shift, and go to state 33
    REFDATE       shift, and go to state 34
    REFSEASON     shift, and go to state 35
    NUMBER        shift, and go to state 36
    '-'           shift, and go to state 40
    '('           shift, and go to state 85

    term        go to state 48
    unary       go to state 50
    expression  go to state 123
    laggedval   go to state 53
    date        go to state 54
    interface   go to state 55
    namedval    go to state 56


state 64

   53 expression: MIN2 '(' . expression ',' expression ')'

    NAME          shift, and go to state 81
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    PID           shift, and go to state 13
    IPID          shift, and go to state 14
    LOOKUP        shift, and go to state 15
    IFELSE        shift, and go to state 16
    ACCUMULATE    shift, and go to state 17
    PREDICT       shift, and go to state 18
    SQRT          shift, and go to state 19
    LOG           shift, and go to state 20
    LN            shift, and go to state 21
    EXP           shift, and go to state 22
    ABS           shift, and go to state 23
    YEAR          shift, and go to state 25
    MONTH         shift, and go to state 26
    DAY           shift, and go to state 27
    HOUR          shift, and go to state 28
    MINDAY        shift, and go to state 29
    MIN           shift, and go to state 30
    DT            shift, and go to state 31
    SEASON        shift, and go to state 32
    DATETIME      shift, and go to state 33
    REFDATE       shift, and go to state 34
    REFSEASON     shift, and go to state 35
    NUMBER        shift, and go to state 36
    '-'           shift, and go to state 40
    '('           shift, and go to state 85

    term        go to state 48
    unary       go to state 50
    expression  go to state 124
    laggedval   go to state 53
    date        go to state 54
    interface   go to state 55
    namedval    go to state 56


state 65

   56 expression: MAX3 '(' . expression ',' expression ',' expression ')'

    NAME          shift, and go to state 81
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    PID           shift, and go to state 13
    IPID          shift, and go to state 14
    LOOKUP        shift, and go to state 15
    IFELSE        shift, and go to state 16
    ACCUMULATE    shift, and go to state 17
    PREDICT       shift, and go to state 18
    SQRT          shift, and go to state 19
    LOG           shift, and go to state 20
    LN            shift, and go to state 21
    EXP           shift, and go to state 22
    ABS           shift, and go to state 23
    YEAR          shift, and go to state 25
    MONTH         shift, and go to state 26
    DAY           shift, and go to state 27
    HOUR          shift, and go to state 28
    MINDAY        shift, and go to state 29
    MIN           shift, and go to state 30
    DT            shift, and go to state 31
    SEASON        shift, and go to state 32
    DATETIME      shift, and go to state 33
    REFDATE       shift, and go to state 34
    REFSEASON     shift, and go to state 35
    NUMBER        shift, and go to state 36
    '-'           shift, and go to state 40
    '('           shift, and go to state 85

    term        go to state 48
    unary       go to state 50
    expression  go to state 125
    laggedval   go to state 53
    date        go to state 54
    interface   go to state 55
    namedval    go to state 56


state 66

   55 expression: MIN3 '(' . expression ',' expression ',' expression ')'

    NAME          shift, and go to state 81
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    PID           shift, and go to state 13
    IPID          shift, and go to state 14
    LOOKUP        shift, and go to state 15
    IFELSE        shift, and go to state 16
    ACCUMULATE    shift, and go to state 17
    PREDICT       shift, and go to state 18
    SQRT          shift, and go to state 19
    LOG           shift, and go to state 20
    LN            shift, and go to state 21
    EXP           shift, and go to state 22
    ABS           shift, and go to state 23
    YEAR          shift, and go to state 25
    MONTH         shift, and go to state 26
    DAY           shift, and go to state 27
    HOUR          shift, and go to state 28
    MINDAY        shift, and go to state 29
    MIN           shift, and go to state 30
    DT            shift, and go to state 31
    SEASON        shift, and go to state 32
    DATETIME      shift, and go to state 33
    REFDATE       shift, and go to state 34
    REFSEASON     shift, and go to state 35
    NUMBER        shift, and go to state 36
    '-'           shift, and go to state 40
    '('           shift, and go to state 85

    term        go to state 48
    unary       go to state 50
    expression  go to state 126
    laggedval   go to state 53
    date        go to state 54
    interface   go to state 55
    namedval    go to state 56


state 67

   57 expression: PID '(' . expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ')'

    NAME          shift, and go to state 81
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    PID           shift, and go to state 13
    IPID          shift, and go to state 14
    LOOKUP        shift, and go to state 15
    IFELSE        shift, and go to state 16
    ACCUMULATE    shift, and go to state 17
    PREDICT       shift, and go to state 18
    SQRT          shift, and go to state 19
    LOG           shift, and go to state 20
    LN            shift, and go to state 21
    EXP           shift, and go to state 22
    ABS           shift, and go to state 23
    YEAR          shift, and go to state 25
    MONTH         shift, and go to state 26
    DAY           shift, and go to state 27
    HOUR          shift, and go to state 28
    MINDAY        shift, and go to state 29
    MIN           shift, and go to state 30
    DT            shift, and go to state 31
    SEASON        shift, and go to state 32
    DATETIME      shift, and go to state 33
    REFDATE       shift, and go to state 34
    REFSEASON     shift, and go to state 35
    NUMBER        shift, and go to state 36
    '-'           shift, and go to state 40
    '('           shift, and go to state 85

    term        go to state 48
    unary       go to state 50
    expression  go to state 127
    laggedval   go to state 53
    date        go to state 54
    interface   go to state 55
    namedval    go to state 56


state 68

   58 expression: IPID '(' . expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ',' expression ')'

    NAME          shift, and go to state 81
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    PID           shift, and go to state 13
    IPID          shift, and go to state 14
    LOOKUP        shift, and go to state 15
    IFELSE        shift, and go to state 16
    ACCUMULATE    shift, and go to state 17
    PREDICT       shift, and go to state 18
    SQRT          shift, and go to state 19
    LOG           shift, and go to state 20
    LN            shift, and go to state 21
    EXP           shift, and go to state 22
    ABS           shift, and go to state 23
    YEAR          shift, and go to state 25
    MONTH         shift, and go to state 26
    DAY           shift, and go to state 27
    HOUR          shift, and go to state 28
    MINDAY        shift, and go to state 29
    MIN           shift, and go to state 30
    DT            shift, and go to state 31
    SEASON        shift, and go to state 32
    DATETIME      shift, and go to state 33
    REFDATE       shift, and go to state 34
    REFSEASON     shift, and go to state 35
    NUMBER        shift, and go to state 36
    '-'           shift, and go to state 40
    '('           shift, and go to state 85

    term        go to state 48
    unary       go to state 50
    expression  go to state 128
    laggedval   go to state 53
    date        go to state 54
    interface   go to state 55
    namedval    go to state 56


state 69

   39 unary: LOOKUP '(' . expression ',' array ',' array ')'
